--- a/views/pages/survey.ejs
+++ b/views/pages/survey.ejs
@@ -109,52 +109,65 @@
                         <option value="5">5 (Strong Agree)</option>
                     </select>
                 </ol>
-                <button>Submit</button>
+                <button class="submit">Submit</button>
             </form>
             </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <!-- <script type="text/javascript" src="/public/Assets/js/app.js"></script> -->
-        <script type="text/javascript">
-        
-//         function validInput(){
-//     var valid= true;
-//     $('.friend_form').each(function(){
-//         if($(this).val()==""){
-//             valid=false
-//         }
-//     })
-//     $('.q_select').each(function(){
-//         if($(this).val()==""){
-//             valid=false
-//         }
-//     })
-//     return valid; 
-// }
+     <script type="text/javascript">
+    
+    var allAnswers = [];
+	$(".submit").on("click", function(event){
+		var newFriend = {
+			name: $("#name").val().trim(),
+			photo: $("#photo").val().trim(),
+			answers: function(){
+				for (i=1; i < 11; i++){
+					var answer = $('input[name="q'+i+'"]:checked').val();
+					allAnswers.push(parseInt(answer));
+				}
+				return allAnswers;
+			}
+		};
+		console.log(newFriend);
+		$.post("/api/friends", newFriend, function(data){
+			if (data) {
+				alert("Get ready to make new friends!");
+			}
+			else {
+				alert("Uh-oh! Something went wrong with your survey!");
+			}
+			// clears the form on submit
+			$("#name").val("");
+			$("#photo").val("");
+			$('input[type="radio"]').attr('checked', false);
+		}).done(function() {
+			// calls friends api
+			$.ajax({
+					url: "/api/friends",
+					method: "GET",
+					datatype: 'json'
+			}).done(function(res, err) {
+				if(err) {
+					console.log(err);
+				}
+				// console.log(res);
+				var current = res[res.length-1];
+				// console.log(current);
+				// stores new user's best match and displays to modal
+				var bestFriend = current.bestie;
+				console.log(bestFriend);
+				$("#friend-name").text("Hi " + current.name + ", my name is " + bestFriend.name + "!");
+				$("img#friend-photo").attr("src", bestFriend.photo);
+			});
+		}); // ENDS post.done()
+	}); // ENDS button onClick()
+</script>
 
-// if (validInput()){
-//     var userdata={
-//         name: $('#name').val(),
-//         photo: $('#pic').val(),
-//         scores: [$("#q1").val(),
-//         $("#q2").val(),
-//         $("#q3").val(),
-//         $("#q4").val(),
-//         $("#q5").val(),
-//         $("#q6").val(),
-//         $("#q7").val(),
-//         $("#q8").val(),
-//         $("#q9").val(),
-//         $("#q10").val()
-//       ]
 
-//     };
-// }
-
-// $.post('/api/friends', userdata, function (data) {});
-//       </script>
+       
 </body>
 
 </html>
